# easygit

./: .gitignore  Cargo.toml  LICENSE  README.md  \
.github/workflows/: release-binaries.yml
npm/: README.md  package.json
npm/scripts/: postinstall.js
src/: branch_input.rs  git.rs  main.rs  notification.rs  regions.rs
src/app/: branches.rs  changes.rs  commit_message.rs  commits.rs  mod.rs
src/ui/: branches.rs  commits.rs  details.rs  input.rs  layout.rs  mod.rs  panel.rs  popup.rs  stashes.rs  status.rs
